[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resistance-control"
version = "0.1.0"
description = "Reinforcement learning for antimicrobial resistance control"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resistance_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "unit: Tier-1 oracle - the code does what the code claims (fast, deterministic).",
    "validation: Tier-2 oracle - the model does what the science claims (slow, may be stochastic).",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
strict = true
